CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(ezpp_class)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    LINK_LIBRARIES(pthread)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ENDIF()
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(ezpp_class ${DIR_SRCS})

SET(CMAKE_BUILD_TYPE "Release")
