CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(ezpp_code_clip)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    LINK_LIBRARIES(pthread)
ENDIF()
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(ezpp_code_clip ${DIR_SRCS})

SET(CMAKE_BUILD_TYPE "Release")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -std=c++11")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++11")
